add: dashboard gestión nominas + detalle de entidad Empleado parcial
Commit intermedio con progreso a integrar en otras ramas

--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -27,6 +27,9 @@
     <button>
         <a th:href="@{/administrador/dashboardGestionUsuarios}">Desbloqueo / bloqueo de usuarios</a>
     </button>
+    <button>
+        <a th:href="@{/administrador/nominas/dashboard}">Gestion de nominas</a>
+    </button>
 </div>
 
 <div>
