--- a/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinancieros.html
@@ -127,9 +127,9 @@
         <br><br>
 
         <label for="cvc" th:text="#{Datos.Economicos.cvc}"/>
-        <input type="text" id="cvc" th:field="*{tarjetasCreditoDTO.CVCDTO}"  />
-        <div th:if="${#fields.hasErrors('tarjetasCreditoDTO.CVCDTO')}"
-             th:errors="*{tarjetasCreditoDTO.CVCDTO}" class="error"></div>
+        <input type="text" id="cvc" th:field="*{tarjetasCreditoDTO.cvcDTO}"  />
+        <div th:if="${#fields.hasErrors('tarjetasCreditoDTO.cvcDTO')}"
+             th:errors="*{tarjetasCreditoDTO.cvcDTO}" class="error"></div>
         <br><br>
 
 
