--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -27,6 +27,14 @@
     <button>
         <a th:href="@{/administrador/dashboardGestionUsuarios}">Desbloqueo / bloqueo de usuarios</a>
     </button>
+    <br>
+    <h3>Productos</h3>
+    <button>
+        <a th:href="@{/administrador/consulta-productos}">Consulta de productos</a>
+    </button>
+    <button>
+        <a th:href="@{/administrador/importar-catalogo}">Importar catalogo</a>
+    </button>
 </div>
 
 <div>
