--- a/empleados/src/main/resources/templates/areaPersonal.html
+++ b/empleados/src/main/resources/templates/areaPersonal.html
@@ -22,6 +22,12 @@
     </ul>
 </div>
 
+<div class="card-body text-center">
+    <h5 class="card-title">Consultar Productos</h5>
+    <p class="card-text">Busca y filtra productos en el catálogo.</p>
+    <a th:href="@{/empleados/consulta-productos}" class="btn btn-info">Ir a Consulta de Productos</a>
+</div>
+
 <div>
     <h2>Información del Cliente Actual</h2>
     <p>Navegador (User-Agent): <span th:text="${navegadorActual}"></span></p>
@@ -29,7 +35,7 @@
 
 <hr>
 <p>
-    <a th:href="@{/empleados/registro-datos}">Ir a Registro de Empleado</a> </p>
+    <a th:href="@{/empleados/registro-datos}">Ir a Registro de Empleado</a></p>
 <p>
     <a th:href="@{/usuarios/logout}">Cerrar sesión</a>
 </p>
