ADD: Búsqueda Parametriza Empleados en Adminis.
+ ADD: paquete Specs en Administración pra búsquedas parametrizadas
+ ADD: Plantilla, Servicio y Endpoint para las búsquedas parametrizadas
  de empleado
+ UPDATE: ServicioDepartamento movido a Común para evitar duplicidad de
  código
+ ADD: Modificación de Empleado desde búsqueda Parametrizada. En Proceso
  de Construcción
+ ADD: Datos de prueba en Data.sql para búsquedas parametrizadas
+ HOTFIX: Referencia tipo_via arreglado. Clave Foránea impedia insertar
  datos desde data.sql

  Issue #27

* No comentar con "#" el archivo data.sql. Provoca fallos a la hora de
  insertar datos. Mejor comentar con "--"

--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -27,6 +27,9 @@
     <button>
         <a th:href="@{/administrador/dashboardGestionUsuarios}">Desbloqueo / bloqueo de usuarios</a>
     </button>
+    <button>
+        <a th:href="@{/administrador/consulta-empleado}">Consulta de Empleados</a>
+    </button>
 </div>
 
 <div>
