--- a/empleados/src/main/resources/templates/empleadoRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoRegistro.html
@@ -58,7 +58,7 @@
              th:text="${g.nombreGenero}"></label><br>
     </div>
 
-    <input type="button" th:value="#{Boton.selecciona.genero}" onclick="selectPrimerGenero()">
+    <input type="button" th:value="#{Boton.selecciona.genero}" onclick="seleccionarGeneroF()">
     <input type="button" th:value="#{Boton.deselecciona.genero}" onclick="deseleccionaTodosGeneros()">
 
 
