--- a/administracion/src/main/resources/templates/areaPersonal.html
+++ b/administracion/src/main/resources/templates/areaPersonal.html
@@ -17,7 +17,7 @@
         </li>
         <li>
             <strong>Autenticaciones válidas en esta sesión del navegador:</strong>
-            <span th:text="${loginsSesionActual}">0</span>
+            <span th:text="${loginsSesionActualAdmin}">0</span>
         </li>
     </ul>
 </div>
@@ -45,12 +45,14 @@
 
 <div>
     <h2>Información del Cliente Actual</h2>
-    <p>Navegador (User-Agent): <span th:text="${navegadorActual}"></span></p>
+    <p>Navegador (User-Agent): <span th:text="${navegadorActualAdmin}"></span></p>
 </div>
 
 <hr>
 <p>
-    <a th:href="@{/administrador/logout}">Cerrar sesión</a>
+    <button>
+        <a th:href="@{/administrador/logout}">Cerrar sesión</a>
+    </button>
 </p>
 
 </body>
