--- a/administracion/src/main/resources/templates/formulario-aniadir-linea.html
+++ b/administracion/src/main/resources/templates/formulario-aniadir-linea.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Añadir Línea de Nómina</title>
+<head><title>Añadir Línea de Nómina</title>
+    <script> function toggleFields() {
+        var porcentaje = document.getElementById('porcentaje');
+        var cantidad = document.getElementById('cantidad');
+
+        if (porcentaje.value !== '') {
+            cantidad.disabled = true;
+            cantidad.value = '';
+        } else {
+            cantidad.disabled = false;
+        }
+
+        if (cantidad.value !== '') {
+            porcentaje.disabled = true;
+            porcentaje.value = '';
+        } else {
+            porcentaje.disabled = false;
+        }
+    }
+    </script>
+
 </head>
-<body>
-<h1>Añadir Línea de Nómina</h1>
-<form th:action="@{/administrador/nominas/nomina/{id}/aniadir-linea(id=${nomina.id})}" method="post">
-    <label for="concepto">Concepto:</label>
-    <input type="text" id="concepto" name="concepto" required>
+<body><h1>Añadir Línea de Nómina</h1>
+<form th:action="@{/administrador/nominas/nomina/{id}/aniadir-linea(id=${nomina.id})}" method="post"><label
+        for="concepto">Concepto:</label> <input type="text" id="concepto" name="concepto" required> <br>
+
+    <label for="porcentaje">Porcentaje:</label>
+    <input type="number" step="0.01" id="porcentaje" name="porcentaje"
+           oninput="toggleFields()">
     <br>
+
     <label for="cantidad">Cantidad:</label>
-    <input type="number" id="cantidad" name="cantidad" required>
+    <input type="number" step="0.01" id="cantidad" name="cantidad"
+           oninput="toggleFields()">
     <br>
-    <label for="importe">Importe:</label>
-    <input type="number" step="0.01" id="importe" name="importe" required>
-    <br>
+
     <button type="submit">Añadir Línea</button>
+
 </form>
+<div th:if="${error}" style="color:red;" th:text="${error}"></div>
 </body>
 </html>
